
v0.0.2

* Rebuilding for RPM

v0.0.1

* [BGBUILD-3] Create EBS delivery plugin
